[package]
name = "cov_viz"
description = "Generate data used by the CCGR Portal experiment coverage visualizer"
version = "0.5.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/ccgr_portal_cov_viz", rev = "cf0cf3a27c27b12e2e79de2f00eeec826da62b8c" }
# cov_viz_ds = { path = "../cov_viz_ds" }                             # For working with a local copy during development
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
postgres_range = "0.11.0"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
