[package]
name = "cov_viz_manifest"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/ccgr_portal_cov_viz", rev = "cf0cf3a27c27b12e2e79de2f00eeec826da62b8c" }
# cov_viz_ds = { path = "../cov_viz_ds" } # For working with a local copy during development
exp_viz = { git = "https://github.com/ReddyLab/ccgr_portal_cov_viz", rev = "83b24032cd5cda8a69f7da1e1b1542f57d2b5c3b" }
# exp_viz = { path = "../exp_viz" }                      # For working with a local copy during development
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
