[package]
name = "exp_viz"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/ccgr_portal_cov_viz", rev = "826fb4f5feb40d6f674ed2fef4613097cff7d30d" }
# cov_viz_ds = { path = "../cov_viz_ds" }                # For working with a local copy during development
rayon = "1.5"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
