[package]
name = "exp_viz"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cov_viz_ds = { git = "https://github.com/ReddyLab/ccgr_portal_cov_viz", rev = "d547248852ba69a9ee031734b7a0f0be6d0107de" }
# cov_viz_ds = { path = "../cov_viz_ds" }                # For working with a local copy during development
rayon = "1.5"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
