[package]
name = "filter_viz_test"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
bincode = "1.3.3"
rayon = "1.5"
roaring = "0.10.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.153", features = ["derive"] }
postgres = { version = "0.19.3", features = ["with-serde_json-1"] }
postgres_range = "0.11.0"
